src/objects/Points_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria_Behavior__c</fullName>
        <label>Criteria Behavior</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hyperlink_Source_Record_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hyperlink Source Record Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Points_Display_Name__c</fullName>
        <label>My Points Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Points_Awarded__c</fullName>
        <label>Number of Points Awarded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Error_Message__c</fullName>
        <label>Processing Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Contact_Field_API_Name__c</fullName>
        <label>Source Contact Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Points Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Number_of_Points_Awarded__c</columns>
        <columns>Criteria_Behavior__c</columns>
        <columns>Source_Contact_Field_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Automated_Points_Rules</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Number_of_Points_Awarded__c</columns>
        <columns>Criteria_Behavior__c</columns>
        <columns>Source_Contact_Field_API_Name__c</columns>
        <columns>Hyperlink_Source_Record_Name__c</columns>
        <columns>My_Points_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Points_Rule__c.System_Generated</value>
        </filters>
        <label>All Automated Points Rules</label>
    </listViews>
    <listViews>
        <fullName>Points_Rules_with_Errors</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Object_API_Name__c</columns>
        <columns>Number_of_Points_Awarded__c</columns>
        <columns>Processing_Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Processing_Error_Message__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Points Rules with Errors</label>
    </listViews>
    <nameField>
        <label>Points Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Points Rules</pluralLabel>
    <recordTypes>
        <fullName>Manually_Assigned</fullName>
        <active>true</active>
        <label>Manually Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Generated</fullName>
        <active>true</active>
        <label>System Generated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>